--- a/styles/globals.css
+++ b/styles/globals.css
@@ -10,3 +10,13 @@
   font-family: 'Inter Regular';
   src: url('../src/assets/fonts/Inter-Regular.ttf');
 }
+/* Hide scrollbar for Chrome, Safari and Opera */
+*::-webkit-scrollbar {
+  display: none;
+}
+
+/* Hide scrollbar for IE, Edge and Firefox */
+* {
+  -ms-overflow-style: none;  /* IE and Edge */
+  scrollbar-width: none;  /* Firefox */
+}
