--- a/styles/globals.css
+++ b/styles/globals.css
@@ -12,11 +12,17 @@
 }
 /* Hide scrollbar for Chrome, Safari and Opera */
 *::-webkit-scrollbar {
-  display: none;
+  width: 10px;
 }
 
-/* Hide scrollbar for IE, Edge and Firefox */
-* {
-  -ms-overflow-style: none;  /* IE and Edge */
-  scrollbar-width: none;  /* Firefox */
+*::-webkit-scrollbar-track {
+  background-color: white;
+  box-shadow: inset 0 0 6px #0A1F44;
+
+}
+
+*::-webkit-scrollbar-thumb {
+  box-shadow: inset 0 0 6px #0A1F44;
+  background-color: #0A1F44;
+  border-radius: 10px;
 }
