--- a/styles/globals.css
+++ b/styles/globals.css
@@ -22,7 +22,7 @@
 }
 
 *::-webkit-scrollbar-thumb {
-  box-shadow: inset 0 0 6px #0A1F44;
-  background-color: #0A1F44;
+  box-shadow: inset 0 0 6px #4340FC;
+  background-color: #4340FC;
   border-radius: 10px;
 }
